--- a/index.html
+++ b/index.html
@@ -610,7 +610,8 @@
     progress: true,
     history: true,
     center: true,
-
+    autoSlide: 10000,
+    loop: true,
     theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
     transition: Reveal.getQueryHash().transition || 'linear', // default/cube/page/concave/zoom/linear/fade/none
 
