--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
           </div>
         </section>
 
-        <section data-background="#000">
+        <section data-background="#000" data-autoslide="15000">
           <style type="text/css">#data-breach {margin:0px;}</style>
           <img id="data-breach" src="images/databreaches.png">
           <div class="source">Source: <a href="http://www.bloomberg.com/infographics/2014-08-21/top-data-breaches.html">Bloomberg</a></div>
@@ -231,12 +231,12 @@
             }
           </style>
 
-        <section>
-          <h2>Why not do manually?</h2>
+        <section data-autoslide="5000">
+          <h2>Why you should avoid manual server hardening?</h2>
         </section>
 
         <section>
-          <h2>Why not do manually?</h2>
+          <h2>Why you should avoid manual server hardening?</h2>
           <ol id="manual">
             <li>Manual work is <span class="number">not 100% accurate</span></li>
             <li>Every project needs to <span class="number">reinvent the wheel</span></li>
@@ -247,28 +247,28 @@
           </ol>
         </section>
 
-        <section data-transition="none">
+        <section data-transition="none" data-autoslide="500">
           <h2>Server Scaling</h2>
           <div id="scaling">
           <span class="number">Manual</span> hardening does not fit to <span class="number">autoscaling</span> environments</div>
           <img src="images/configuration_01.png">
         </section>
 
-        <section data-transition="none">
+        <section data-transition="none" data-autoslide="500">
           <h2>Server Scaling</h2>
           <div id="scaling">
           <span class="number">Manual</span> hardening does not fit to <span class="number">autoscaling</span> environments</div>
           <img src="images/configuration_02.png">
         </section>
 
-        <section data-transition="none">
+        <section data-transition="none" data-autoslide="500">
           <h2>Server Scaling</h2>
           <div id="scaling">
           <span class="number">Manual</span> hardening does not fit to <span class="number">autoscaling</span> environments</div>
           <img src="images/configuration_03.png">
         </section>
 
-        <section data-transition="none">
+        <section data-transition="none" data-autoslide="4000">
           <h2>Server Scaling</h2>
           <div id="scaling">
           <span class="number">Manual</span> hardening does not fit to <span class="number">autoscaling</span> environments</div>
@@ -292,7 +292,7 @@
 
       </section>
 
-      <section id="demo">
+      <section id="demo" data-autoslide="15000">
 
       <style type="text/css">
         #demo .checks li {
@@ -317,9 +317,9 @@
           <th style="text-align: center;">After</th>
           </tr>
           <tr>
-          <td><img src="images/apply-01.png"></td>
-          <td><img src="images/apply-02.png"></td>
-          <td><img src="images/apply-03.png"></td>
+          <td><img style="width:270px" src="images/apply-01.png"></td>
+          <td><img style="width:270px" src="images/apply-02.png"></td>
+          <td><img style="width:270px" src="images/apply-03.png"></td>
           </tr>
           <tr style="font-size: 18px;">
           <td>
