--- a/index.html
+++ b/index.html
@@ -663,6 +663,8 @@
   // Full list of configuration options available here:
   // https://github.com/hakimel/reveal.js#configuration
   Reveal.initialize({
+    width: 960,
+    height: 540,
     controls: true,
     progress: true,
     history: true,
