remove picture size

--- a/index.html
+++ b/index.html
@@ -317,9 +317,9 @@
           <th style="text-align: center;">After</th>
           </tr>
           <tr>
-          <td><img style="width:270px" src="images/apply-01.png"></td>
-          <td><img style="width:270px" src="images/apply-02.png"></td>
-          <td><img style="width:270px" src="images/apply-03.png"></td>
+          <td><img src="images/apply-01.png"></td>
+          <td><img src="images/apply-02.png"></td>
+          <td><img src="images/apply-03.png"></td>
           </tr>
           <tr style="font-size: 18px;">
           <td>
