--- a/index.html
+++ b/index.html
@@ -665,6 +665,8 @@
   Reveal.initialize({
     width: 960,
     height: 540,
+    minScale: 0.2,
+    maxScale: 2.0,
     controls: true,
     progress: true,
     history: true,
