--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
         <section data-background="#000" data-autoslide="15000">
           <style type="text/css">#data-breach {margin:0px;}</style>
-          <img id="data-breach" src="images/databreaches.png">
+          <img id="data-breach" style="width:100%" src="images/databreaches.png">
           <div class="source">Source: <a href="http://www.bloomberg.com/infographics/2014-08-21/top-data-breaches.html">Bloomberg</a></div>
         </section>
 
