optimize image size

--- a/index.html
+++ b/index.html
@@ -430,19 +430,19 @@
 
 
               <ol style="list-style:none; text-align: center;">
-                <span style="font-weight:600">Security Tests</span>
+                <span style="font-weight:600; font-size:90%;">Security Tests</span>
                 <li>
                   <a href="http://jenkins-ci.org/">
-                    <img src="images/jenkins_headshot.png">
+                    <img style="margin: 0px;height: 60px;" src="images/jenkins_headshot.png">
                   </a>
                 </li>
                 <li>
                   <a href="http://serverspec.org/">
-                    <img src="images/serverspec.png">
+                    <img style="margin: 0px;" src="images/serverspec.png">
                   </a>
                 </li>
 
-                <span style="font-weight:600">Source code</span>
+                <span style="font-weight:600; font-size:90%;">Source code</span>
 
                 <li><a href="https://github.com/bbatsov/rubocop">Robocop</a>
                 </li>
