--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
       -->
 
       <section>
-        <section>
+        <section data-background="images/1024px-U.S._Bullion_Depository.jpg">
+
 
           <h2 style="margin-bottom: 50px">Problem</h2>
 
@@ -95,13 +96,20 @@
             </th>
           </tr>
           <tr>
-            <td style="text-align: center;">
-            <img crossorigin="anonymous" src="http://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/U.S._Bullion_Depository.jpg/1024px-U.S._Bullion_Depository.jpg" width="920" class="" style="max-width: 300px;">
-            <div style="font-size: 20px;">Fort Knox (Source: Wikipedia)</div>
+            <td style="vertical-align: top;">
+              <ul>
+                <li>Keep a 100-foot buffer zone around the site.</li>
+                <li>Limit entry points</li>
+                <li>Plan for bomb detection</li>
+                <li>Make fire doors exit only</li>
+                <li>Surveillance cameras</li>
+                <li>...</li>
+              </ul>
             </td>
-            <td style="text-align: center;">
-            <div style="font-size:200px; position: relative; top: -50px;text-align: center;">?</div>
-            <div style="font-size: 20px;margin-top: 65px;">Out-of-the-box server configurations are insecure and increase the probability of server attacks and data breaches.</div>
+            <td style="vertical-align: top;">
+              <div style="font-size:100px; line-height:100px; text-align: center;">?</div>
+              <div style="font-size: 20px;margin-top: 35px;">Out-of-the-box server configurations are insecure and increase the probability of server attacks and data breaches.</div>
+
             </td>
           </tr>
           </table>
@@ -134,7 +142,7 @@
         
         </section>
 
-        <section>
+        <section data-background="images/bees-345628_1280.jpg">
           <style type="text/css">
           #attacks {
             list-style:none;
